fixed spacing

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -34,7 +34,7 @@
 
 
 #please_center{
-    margin-left: 300px;
+    margin-left: 150px;
     margin-right: auto;
       
 }
